fixed a bug with the hidden menu not being displayed properly on click, it was being covered by the rest of the site

--- a/css/queries.css
+++ b/css/queries.css
@@ -383,6 +383,7 @@
         left: 0;
         top: 0;
         animation: moveInRight .75s;
+        z-index: 10000;
     }
 
 
